# skipper

./: .gitignore  Future-Features.md  README.md  meson.build
data/: meson.build  skipper.desktop
src/: about.gs  aboutwindow.c  aboutwindow.h  app.c  app.gs  app.h  headerbar.blp  headerbar.c  headerbar.h  macros.h  main.c  main.gs  meson.build  mylabel.c  mylabel.h  skipper.gresource.xml  window.blp  window.c  window.gs  window.h
